force-app/main/default/objects/Mode_of_payment__c/Mode_of_payment__c.object-meta.xml
<CustomObject>
    <label>Mode of payment</label>
    <nameField>
        <label>mode of payment name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mode of payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>