force-app/main/default/objects/Mode_of_payment__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>&quot;Remaining balance in your account is = &quot; +  TEXT(100000 - payment_amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <type>Text</type>
</CustomField>