force-app/main/default/objects/Mode_of_payment__c/fields/card_number__c.field-meta.xml
<CustomField>
    <fullName>card_number__c</fullName>
    <label>card number</label>
    <length>16</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>