force-app/main/default/objects/Mode_of_payment__c/fields/card_owner_name__c.field-meta.xml
<CustomField>
    <fullName>card_owner_name__c</fullName>
    <label>card  owner name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>