force-app/main/default/objects/Mode_of_payment__c/fields/CVV_number__c.field-meta.xml
<CustomField>
    <fullName>CVV_number__c</fullName>
    <label>CVV number</label>
    <length>3</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>