force-app/main/default/objects/Mode_of_payment__c/fields/payment_amount__c.field-meta.xml
<CustomField>
    <fullName>payment_amount__c</fullName>
    <label>payment amount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>