force-app/main/default/objects/Mode_of_payment__c/fields/select_bank__c.field-meta.xml
<CustomField>
    <fullName>select_bank__c</fullName>
    <label>select bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>state bank of india</fullName>
            </value>
            <value>
                <fullName>bank of india</fullName>
            </value>
            <value>
                <fullName>bank of baroda</fullName>
            </value>
            <value>
                <fullName>punjab national bank</fullName>
            </value>
            <value>
                <fullName>axis bank</fullName>
            </value>
            <value>
                <fullName>hdfc bank</fullName>
            </value>
            <value>
                <fullName>icici bank</fullName>
            </value>
            <value>
                <fullName>kotak mahindra bank</fullName>
            </value>
            <value>
                <fullName>oriental bank of commerce</fullName>
            </value>
            <value>
                <fullName>union bank</fullName>
            </value>
            <value>
                <fullName>canara bank</fullName>
            </value>
            <value>
                <fullName>narmada satpura gramin bank</fullName>
            </value>
            <value>
                <fullName>vindhya bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>