force-app/main/default/objects/Mode_of_payment__c/fields/validity_year__c.field-meta.xml
<CustomField>
    <fullName>validity_year__c</fullName>
    <label>validity year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>