force-app/main/default/objects/Mode_of_payment__c/recordTypes/Balance_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Balance_Enquiry</fullName>
    <active>true</active>
    <label>Balance Enquiry</label>
</RecordType>