force-app/main/default/objects/Mode_of_payment__c/recordTypes/credit_card_payment.recordType-meta.xml
<RecordType>
    <fullName>credit_card_payment</fullName>
    <active>true</active>
    <label>credit card payment</label>
</RecordType>