force-app/main/default/objects/Mode_of_payment__c/recordTypes/debit_card_payment.recordType-meta.xml
<RecordType>
    <fullName>debit_card_payment</fullName>
    <active>true</active>
    <label>debit card payment</label>
</RecordType>