force-app/main/default/objects/Mode_of_payment__c/recordTypes/UPI_Payment.recordType-meta.xml
<RecordType>
    <fullName>UPI_Payment</fullName>
    <active>true</active>
    <label>UPI Payment</label>
</RecordType>